<resources>
    <string name="app_name">Weather App</string>
    <string name="today">Today</string>
    <string name="rain">Rain</string>
    <string name="clear">Clear</string>
    <string name="clouds">Clouds</string>
    <string name="snow">Snow</string>
    <string name="fog">Fog</string>
    <string name="def_temp">27</string>

    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>

    <string name="google_maps_key">AIzaSyApnHoBBbm9ro5msO6wrUbyn1HjNplG8LE</string>
</resources>